[package]
name = "vulkano-www"
version = "0.1.0"
edition = "2018"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
publish = false

[dependencies]
lazy_static = "1.1"
mustache = "0.9"
pulldown-cmark = "0.7.0"
rouille = "3.0.0"

[dev-dependencies]
vulkano = "0.20"
vulkano-shaders = "0.20"
image = "0.23"

# FIXME: remove when vulkano gets updated
[patch.crates-io]
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }