[package]
name = "chapter_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
image = "0.24.0"
winit = "0.27.3"
vulkano-win = "0.31.0"
rand = "0.8.5"
bytemuck = "1.9.1"

[profile.dev]
opt-level = 1 